add vault address

--- a/internals/applications/vault-secrets-operator.yaml
+++ b/internals/applications/vault-secrets-operator.yaml
@@ -12,6 +12,8 @@ spec:
     helm:
       releaseName: vault-secrets-operator
       values: |
+        vault:
+          address: http://vault.mdc.ingtra.net:8200
         environmentVars:
           - name: VAULT_TOKEN
             valueFrom:
