--- a/internals/applications/istio.yaml
+++ b/internals/applications/istio.yaml
@@ -52,6 +52,9 @@ spec:
     targetRevision: 1.13.1
     helm:
       releaseName: istio-ingress
+      values: |
+        autoscaling:
+          enabled: true
   destination:
     server: https://kubernetes.default.svc
     namespace: istio-ingress
