--- a/internals/applications/istio.yaml
+++ b/internals/applications/istio.yaml
@@ -55,6 +55,8 @@ spec:
       values: |
         autoscaling:
           enabled: false
+        service:
+          type: None
   destination:
     server: https://kubernetes.default.svc
     namespace: istio-ingress
