--- a/internals/applications/metallb.yaml
+++ b/internals/applications/metallb.yaml
@@ -12,15 +12,16 @@ spec:
     helm:
       releaseName: metallb
       values: |
-        peers:
-          - peer-address: 172.21.0.1
-            peer-asn: 64521
-            my-asn: 64523
-        address-pools:
-          - name: default
-            protocol: layer2
-            addresses:
-              - 198.51.100.0/24
+        configInline:
+          peers:
+            - peer-address: 172.21.0.1
+              peer-asn: 64521
+              my-asn: 64523
+          address-pools:
+            - name: default
+              protocol: bgp
+              addresses:
+                - 172.23.20.0/24
   destination:
     server: https://kubernetes.default.svc
     namespace: metallb
