--- a/internals/applications/cert-manager.yaml
+++ b/internals/applications/cert-manager.yaml
@@ -15,4 +15,4 @@ spec:
         installCRDs: true
   destination:
     server: https://kubernetes.default.svc
-    namespace: vault-secrets-operator
+    namespace: cert-manager
