--- a/istio-ingress-configs/internal-ingress.yaml
+++ b/istio-ingress-configs/internal-ingress.yaml
@@ -19,7 +19,7 @@ spec:
 apiVersion: networking.istio.io/v1beta1
 kind: Gateway
 metadata:
-  name: gateway
+  name: internal-gateway
 spec:
   selector:
     istio: internal-ingress
