add to internal-gateway

--- a/istio-ingress-configs/internal-ingress.yaml
+++ b/istio-ingress-configs/internal-ingress.yaml
@@ -47,3 +47,5 @@ spec:
       route:
       - destination:
           host: argocd-server.argocd.svc.cluster.local
+  gateways:
+    - internal-gateway
