--- a/istio-ingress-configs/internal-ingress.yaml
+++ b/istio-ingress-configs/internal-ingress.yaml
@@ -47,6 +47,7 @@ spec:
       route:
       - destination:
           host: argocd-server.argocd.svc.cluster.local
-          port: 443
+          port: 
+            number: 443
   gateways:
     - internal-gateway
