--- a/istio-ingress-configs/certs.yaml
+++ b/istio-ingress-configs/certs.yaml
@@ -10,3 +10,16 @@ spec:
     name: letsencrypt
   dnsNames:
     - '*.ig.ingtra.net'
+
+---
+apiVersion: cert-manager.io/v1
+kind: Certificate
+metadata:
+  name: ingtra-net
+spec:
+  secretName: ingtra-net-tls
+  issuerRef:
+    kind: ClusterIssuer
+    name: letsencrypt
+  dnsNames:
+    - '*.ingtra.net'
