--- a/pyrami/kinesis-to-kafka.yaml
+++ b/pyrami/kinesis-to-kafka.yaml
@@ -39,3 +39,5 @@ spec:
               value: redpanda.mdc.ingtra.net:9092
             - name: PYRAMI_CONSUMER_NAME
               value: test2
+            - name: PYRAMI_FROM_EARLIEST
+              value: "false"
