--- a/benthos/split-twitter-stream.yaml
+++ b/benthos/split-twitter-stream.yaml
@@ -13,8 +13,8 @@ spec:
     pipeline:
       processors:
         - bloblang: |
-            root = this.includes.catch({}).key_values().map_each(item -> {"type": "included_" + item.key, "data": item.value}).explode("data")
-            root = root.append({"type": "tweets", "data": this.data})
+            let data = this.includes.catch({}).key_values().map_each(item -> {"type": "included_" + item.key, "data": item.value}).explode("data")
+            root = data.append({"type": "tweets", "data": this.data})
         - unarchive:
             format: json_array
         - bloblang: |
