--- a/benthos/split-twitter-stream.yaml
+++ b/benthos/split-twitter-stream.yaml
@@ -17,7 +17,7 @@ spec:
     pipeline:
       processors:
         - bloblang: |
-            let data = this.includes.catch({}).key_values().map_each(item -> {"type": "included_" + item.key, "data": item.value}).explode("data")
+            let data = this.includes.catch({}).key_values().map_each(item -> {"type": "included_" + item.key, "data": item.value}).explode("data").catch([])
             root = data.append({"type": "tweets", "data": this.data})
         - unarchive:
             format: json_array
