--- a/benthos/split-twitter-stream.yaml
+++ b/benthos/split-twitter-stream.yaml
@@ -18,7 +18,7 @@ spec:
       processors:
         - bloblang: |
             let data = this.includes.catch({}).key_values().map_each(item -> {"type": "included_" + item.key, "data": item.value}).explode("data").catch([])
-            root = data.append({"type": "tweets", "data": this.data})
+            root = $data.append({"type": "tweets", "data": this.data})
         - unarchive:
             format: json_array
         - bloblang: |
