--- a/benthos/split-twitter-stream.yaml
+++ b/benthos/split-twitter-stream.yaml
@@ -22,14 +22,18 @@ spec:
     pipeline:
       processors:
         - bloblang: |
-            let data = this.includes.catch({}).key_values().map_each(item -> {"type": "included_" + item.key, "data": item.value}).map_each(item -> item.explode("data")).flatten()
+            let data = this.includes.catch({}).key_values()
+              .map_each(item -> {"type": "included_" + item.key, "data": item.value})
+              .map_each(item -> item.explode("data"))
+              .map_each(item -> item.merge({"included_by": this.data.id}))
+              .flatten()
             root = $data.append({"type": "tweets", "data": this.data})
         - unarchive:
             format: json_array
         - bloblang: |
             meta output_topic = match this.type {
-              "tweets" => "data.twitter.sampled-tweet.0"
-              "included_tweets" => "data.twitter.included-tweet.0"
+              "tweets" => "data.twitter.sampled-tweets.0"
+              "included_tweets" => "data.twitter.included-tweets.0"
               "included_users" => "data.twitter.included-users.0"
               "included_places" => "data.twitter.included-places.0"
               "included_media" => "data.twitter.included-media.0"
