revert multi line to single line

--- a/benthos/split-twitter-stream.yaml
+++ b/benthos/split-twitter-stream.yaml
@@ -22,11 +22,7 @@ spec:
     pipeline:
       processors:
         - bloblang: |
-            let data = this.includes.catch({}).key_values()
-              .map_each(item -> {"type": "included_" + item.key, "data": item.value})
-              .map_each(item -> item.explode("data"))
-              .map_each(item -> item.merge({"included_by": this.data.id}))
-              .flatten()
+            let data = this.includes.catch({}).key_values().map_each(item -> {"type": "included_" + item.key, "data": item.value}).map_each(item -> item.explode("data")).map_each(item -> item.merge({"included_by": this.data.id})).flatten()
             root = $data.append({"type": "tweets", "data": this.data})
         - unarchive:
             format: json_array
