--- a/benthos/split-twitter-stream.yaml
+++ b/benthos/split-twitter-stream.yaml
@@ -7,7 +7,7 @@ spec:
   replicas: 1
   inlineConfig:
     logger:
-      level: INFO
+      level: ALL
       format: json
       add_timestamp: true
     input:
