--- a/benthos/split-twitter-stream.yaml
+++ b/benthos/split-twitter-stream.yaml
@@ -22,7 +22,7 @@ spec:
     pipeline:
       processors:
         - bloblang: |
-            let data = this.includes.catch({}).key_values().map_each(item -> {"type": "included_" + item.key, "data": item.value})
+            let data = this.includes.key_values().map_each(item -> {"type": "included_" + item.key, "data": item.value}).catch([])
             let data = $data.map_each(item -> item.explode("data")).flatten()
             let data = $data.map_each(item -> item.merge({"included_by": this.data.id}))
             root = $data.append({"type": "tweets", "data": this.data})
