--- a/benthos/split-twitter-stream.yaml
+++ b/benthos/split-twitter-stream.yaml
@@ -24,7 +24,7 @@ spec:
         - bloblang: |
             let data = this.includes.key_values().map_each(item -> {"type": "included_" + item.key, "data": item.value}).catch([])
             let data = $data.map_each(item -> item.explode("data")).flatten()
-            let data = $data.map_each(item -> item.merge({"included_by": this.data.id}))
+            let data = $data.map_each(item -> item.merge({"data": {"included_by": this.data.id}}))
             root = $data.append({"type": "tweets", "data": this.data})
         - unarchive:
             format: json_array
