--- a/internals/applications/kibana.yaml
+++ b/internals/applications/kibana.yaml
@@ -14,6 +14,7 @@ spec:
       values: |
         elasticsearchHosts:
           - http://elasticsearch.mdc.ingtra.net:9200
+      resources: {}
   destination:
     server: https://kubernetes.default.svc
     namespace: kibana
