--- a/benthos/split-twitter-stream.yaml
+++ b/benthos/split-twitter-stream.yaml
@@ -13,6 +13,7 @@ spec:
     input:
       kafka:
         addresses: ["redpanda.mdc.ingtra.net:9092"]
+        target_version: 2.8.1
         topics: ["data.twitter.sampled-stream.1"]
         consumer_group: benthos-split-twitter-stream
         batching:
@@ -40,6 +41,7 @@ spec:
     output:
       kafka:
         addresses: ["redpanda.mdc.ingtra.net:9092"]
+        target_version: 2.8.1
         topic: ${! meta("output_topic") }
         compression: zstd
 
