--- a/internals/applications/opensearch-dashboards.yaml
+++ b/internals/applications/opensearch-dashboards.yaml
@@ -13,6 +13,11 @@ spec:
       releaseName: opensearch-dashboards
       values: |
         opensearchHosts: https://opensearch.mdc.ingtra.net:9200
+        config:
+          opensearch_dashboards.yml:
+            opensearch:
+              ssl:
+                verificationMode: none
   destination:
     server: https://kubernetes.default.svc
     namespace: opensearch-dashboards
