--- a/internals/applications/opensearch-dashboards.yaml
+++ b/internals/applications/opensearch-dashboards.yaml
@@ -13,7 +13,9 @@ spec:
       releaseName: opensearch-dashboards
       values: |
         opensearchHosts: http://opensearch.mdc.ingtra.net:9200
-
+        extraEnvs:
+          - name: DISABLE_SECURITY_DASHBOARDS_PLUGIN
+            value: true
   destination:
     server: https://kubernetes.default.svc
     namespace: opensearch-dashboards
