--- a/internals/applications/kibana.yaml
+++ b/internals/applications/kibana.yaml
@@ -13,9 +13,11 @@ spec:
       releaseName: kibana
       values: |
         elasticsearchHosts: http://elasticsearch.mdc.ingtra.net:9200
-        extraEnvs:
-          - name: "NODE_OPTIONS"
-            value: "--max-old-space-size=1800"
+        resources:
+          requests:
+            memory: 1Gi
+          limits:
+            memory: 1Gi
   destination:
     server: https://kubernetes.default.svc
     namespace: kibana
