--- a/benthos/kafka-to-elasticsearch.yaml
+++ b/benthos/kafka-to-elasticsearch.yaml
@@ -35,3 +35,4 @@ spec:
         urls: ["http://elasticsearch.mdc.ingtra.net:9200"]
         index: ${! meta("kafka_topic") }-${! timestamp_unix().format_timestamp_strftime("%Y-%m-%d") }
         id: ${! meta("kafka_topic") }-${! meta("kafka_partition") }-${! meta("kafka_offset") }
+        type: _doc
