--- a/benthos/kafka-to-elasticsearch.yaml
+++ b/benthos/kafka-to-elasticsearch.yaml
@@ -29,7 +29,7 @@ spec:
       processors:
         - bloblang: |
             root = this
-            root."@timestamp" = (timestamp_unix_nano() / 1000).round()
+            root."@timestamp" = (timestamp_unix_nano() / 1000000).round()
     output:
       elasticsearch:
         urls: ["http://elasticsearch.mdc.ingtra.net:9200"]
