--- a/benthos/split-twitter-stream.yaml
+++ b/benthos/split-twitter-stream.yaml
@@ -22,20 +22,20 @@ spec:
     pipeline:
       processors:
         - bloblang: |
-            let data = this.includes.key_values().map_each(item -> {"type": "included_" + item.key, "data": item.value}).catch([])
+            let data = this.includes.key_values().map_each(item -> {"type": "referenced_" + item.key, "data": item.value}).catch([])
             let data = $data.map_each(item -> item.explode("data")).flatten()
-            let data = $data.map_each(item -> item.merge({"data": {"included_by": this.data.id}}))
+            let data = $data.map_each(item -> item.merge({"data": {"referenced_by": this.data.id}}))
             root = $data.append({"type": "tweets", "data": this.data})
         - unarchive:
             format: json_array
         - bloblang: |
             meta output_topic = match this.type {
               "tweets" => "data.twitter.sampled-tweets.1"
-              "included_tweets" => "data.twitter.included-tweets.1"
-              "included_users" => "data.twitter.included-users.1"
-              "included_places" => "data.twitter.included-places.1"
-              "included_media" => "data.twitter.included-media.1"
-              "included_polls" => "data.twitter.included-polls.1"
+              "referenced_tweets" => "data.twitter.referenced-tweets.1"
+              "referenced_users" => "data.twitter.referenced-users.1"
+              "referenced_places" => "data.twitter.referenced-places.1"
+              "referenced_media" => "data.twitter.referenced-media.1"
+              "referenced_polls" => "data.twitter.referenced-polls.1"
             }
             root = this.data
     output:
