change log level to debug

--- a/benthos/twitter-sampled-tweets-to-cassandra.yaml
+++ b/benthos/twitter-sampled-tweets-to-cassandra.yaml
@@ -7,7 +7,7 @@ spec:
   replicas: 1
   inlineConfig:
     logger:
-      level: ALL
+      level: DEBUG
       format: json
       add_timestamp: true
     input:
