--- a/internals/applications/airflow.yaml
+++ b/internals/applications/airflow.yaml
@@ -27,6 +27,8 @@ spec:
           useHelmHooks: false
         migrateDatabaseJob:
           useHelmHooks: false
+        postgresql:
+          enabled: false
   destination:
     server: https://kubernetes.default.svc
     namespace: airflow
