fix webserver config indent

--- a/internals/applications/airflow.yaml
+++ b/internals/applications/airflow.yaml
@@ -31,8 +31,9 @@ spec:
           enabled: false
         statsd:
           enabled: true
-        webserverConfig: |
-          AUTH_ROLE_PUBLIC = 'Admin'
+        webserver:
+          webserverConfig: |
+            AUTH_ROLE_PUBLIC = 'Admin'
   destination:
     server: https://kubernetes.default.svc
     namespace: airflow
