enable git sync

--- a/internals/applications/airflow.yaml
+++ b/internals/applications/airflow.yaml
@@ -14,6 +14,15 @@ spec:
       values: |
         defaultAirflowRepository: harbor.ingtra.net/dockerhub/apache/airflow
         executor: "KubernetesExecutor"
+        dag:
+          gitSync:
+            enabled: true
+            repo: https://github.com/ingtranet/airflow-dags.git
+            branch: master
+            rev: HEAD
+            depth: 1
+            subPath: dags
+            wait: 300
         data:
           metadataConnection:
             user: airflow
