--- a/internals/applications/airflow.yaml
+++ b/internals/applications/airflow.yaml
@@ -60,7 +60,7 @@ spec:
           logging:
             remote_logging: '{{- ternary "True" "False" .Values.elasticsearch.enabled }}'
             colored_console_log: 'False'
-            level: DEBUG
+            logging_level: DEBUG
           metrics:
             statsd_on: '{{ ternary "True" "False" .Values.statsd.enabled }}'
             statsd_port: 9125
