--- a/internals/applications/airflow.yaml
+++ b/internals/applications/airflow.yaml
@@ -52,9 +52,9 @@ spec:
           logging:
             logging_level: DEBUG
           elasticsearch:
-            write_stdout: True
+            write_stdout: "True"
             end_of_log_mark: end_of_log
-            json_format: True
+            json_format: "True"
             json_fields: asctime, filename, lineno, levelname, message
   destination:
     server: https://kubernetes.default.svc
