--- a/internals/applications/airflow-filebeat.yaml
+++ b/internals/applications/airflow-filebeat.yaml
@@ -18,7 +18,7 @@ spec:
               logging.json: true
               setup:
                 ilm:
-                  enabled: true
+                  enabled: false
                 template:
                   name: "airflow-logs"
                   pattern: "airflow-logs-*"
