--- a/internals/applications/airflow.yaml
+++ b/internals/applications/airflow.yaml
@@ -55,6 +55,8 @@ spec:
             log_id_template: "{dag_id}_{task_id}_{execution_date}_{try_number}"
             end_of_log_mark: end_of_log
             write_stdout: 'True'
+            host_field: 'host.name'
+            offset_field: 'log.offset'
             json_fields: asctime, filename, lineno, levelname, message
           elasticsearch_configs:
             use_ssl: 'False'
