disable autoscale for istiod

--- a/internals/applications/istio.yaml
+++ b/internals/applications/istio.yaml
@@ -33,7 +33,7 @@ spec:
       releaseName: istiod
       values: |
         pilot:
-          autoscaleEnabled: true
+          autoscaleEnabled: false
   destination:
     server: https://kubernetes.default.svc
     namespace: istio-system
