--- a/coupang-partners-proxy/deployment.yaml
+++ b/coupang-partners-proxy/deployment.yaml
@@ -31,3 +31,15 @@ spec:
               value: redis://redis.mdc.ingtra.net:6379/1
           ports:
             - containerPort: 8000
+          livenessProbe:
+            httpGet:
+              path: /healthz
+              port: 8000
+            initialDelaySeconds: 10
+            periodSeconds: 3
+          readinessProbe:
+            httpGet:
+              path: /healthz
+              port: 8000
+            initialDelaySeconds: 10
+            periodSeconds: 3
