change map to array

--- a/istio-ingress-configs/harbor.yaml
+++ b/istio-ingress-configs/harbor.yaml
@@ -76,8 +76,8 @@ spec:
     - harbor.ingtra.net
   http:
     - match:
-        method:
-          exact: GET
+        - method:
+            exact: GET
       route:
         - destination:
             host: harbor.mdc.ingtra.net
