allow post only

--- a/istio-ingress-configs/harbor.yaml
+++ b/istio-ingress-configs/harbor.yaml
@@ -77,7 +77,7 @@ spec:
   http:
     - match:
         - method:
-            exact: GET
+            exact: POST
       route:
         - destination:
             host: harbor.mdc.ingtra.net
