fix error in affinity

--- a/internals/applications/trino.yaml
+++ b/internals/applications/trino.yaml
@@ -29,12 +29,14 @@ spec:
         affinity:
           podAntiAffinity:
             preferredDuringSchedulingIgnoredDuringExecution:
-              - labelSelector:
-                  matchExpressions:
-                  - key: component
-                    operator: In
-                    values: ["worker"]
-                topologyKey: "kubernetes.io/hostname"
+              - weight: 1
+                podAffinityTerm:
+                  labelSelector:
+                      matchExpressions:
+                      - key: component
+                        operator: In
+                        values: ["worker"]
+                    topologyKey: "kubernetes.io/hostname"
   destination:
     server: https://kubernetes.default.svc
     namespace: trino
