--- a/internals/applications/trino.yaml
+++ b/internals/applications/trino.yaml
@@ -26,6 +26,7 @@ spec:
             maxMemoryPerNode: 1GB
           memory:
             heapHeadroomPerNode: 1GB
+        additionalConfigProperties:
           web-ui:
             user: admin
             authentication:
