fix additional config

--- a/internals/applications/trino.yaml
+++ b/internals/applications/trino.yaml
@@ -27,10 +27,8 @@ spec:
           memory:
             heapHeadroomPerNode: 1GB
         additionalConfigProperties:
-          web-ui:
-            user: admin
-            authentication:
-              type: fixed
+          - web-ui.user=admin
+          - web-ui.authentication.type: fixed
         affinity:
           podAntiAffinity:
             preferredDuringSchedulingIgnoredDuringExecution:
